30-tools/keycloak/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
#    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
#    nginx.ingress.kubernetes.io/x-forwarded-for: $proxy_add_x_forwarded_for
#    nginx.ingress.kubernetes.io/x-real-ip: $remote_addr
#    nginx.ingress.kubernetes.io/x-forwarded-host: $host
#    nginx.ingress.kubernetes.io/x-forwarded-proto: $scheme
spec:
  ingressClassName: nginx
  rules:
    - host: keycloak.check-consulting.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 80
  tls:
    - hosts:
        - keycloak.check-consulting.net
      secretName: keycloak-tls
